[package]
name = "watchdog"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["std"] }
clap = { version = "3", features = ["derive"] }
env_logger = "0.9"
nix = "0.23"
futures = "0.3"
ctrlc = "3.2"